2003-10-07  Mike Kestner  <mkestner@ximian.com>

	* generator/ObjectGen.cs (Generate): check sigs.Count in addition
	to the null check to determine if the signals hash should be
	generated.

2003-10-07  Mike Kestner  <mkestner@ximian.com>

	* parser/gapi2xml.pl : look for ");" at the end of property
	declarations to avoid problems with ';' in property docstrings.
	* api/gtk-api.xml : regenerated.  [Fixes #47987]

2003-10-07  Mike Kestner  <mkestner@ximian.com>

	* glib/ListBase.cs : assume ref_owned=false for GObject lists.
	[Fixes #49145]

2003-10-07  Mike Kestner  <mkestner@ximian.com>

	* gtkhtml/Makefile.in : add art-sharp ref
	* sources/Gtk.metadata : make gtk_widget_size_request pass_as ref
	instead of out.  [Fixes #46354]

2003-10-07  Mike Kestner  <mkestner@ximian.com>

	* gtkhtml/Makefile.in : add gnome api to includes and ref in build
	* gtkhtml/gkthtml-api.xml : regenerated
	* sources/Gtk.metadata : remove the gtkhtml gnomeprint hides

2003-10-06  Mike Kestner  <mkestner@ximian.com>

	* Makefile.in : add gtkhtml dir.
	* configure.in : expand gtkhtml/Makefile
	* api/Makefile.in : remove gtkhtml-api.xml
	* generator/CodeGenerator.cs : parse new --outdir, --customdir, 
	and --assembly-name args.
	* generator/GenerationInfo.cs (Ctor): new (dir, dir,assembly) ctor
	* gtkhtml/HTMLStream.custom : moved here from gtk dir
	* gtkhtml/gtkhtml-api.xml : moved here from api dir
	* gtkhtml/Makefile.in : gen source and build dll
	* sources/gtk-sharp-sources.xml : write gtkhtml api to new dir

2003-10-06  Artem Popov  <artemis@yandex.ru>

	* gtk/Dialog.custom : Action area is an HButtonBox, not a VBox.

2003-10-06  Mike Kestner  <mkestner@ximian.com>

	* generator/InterfaceGen.cs (Generate): gen the EventHandlers for sigs
	* generator/Signal.cs (GetHandlerName): kill this and split it into
	EventHandlerName and EventHandlerArgsName props instead of the ugly
	out param hack.
	(GenEventHandler): make public void and add gen_info param. open 