@@ -1513,7 +1513,7 @@
     </object>
     <object name="Bin" cname="GtkBin" parent="GtkContainer">
       <field cname="child" type="GtkWidget*"/>
-      <method name="GetChild" cname="gtk_bin_get_child">
+      <method name="GetChild" cname="gtk_bin_get_child" new_flag="1">
         <return-type type="GtkWidget*"/>
       </method>
       <method name="GetType" cname="gtk_bin_get_type" shared="true">
