@@ -168,7 +168,7 @@ namespace GtkSharp.Generation {
 			else
 				safety = "";
 
-			is_get = ((parms != null && ((parms.IsAccessor && s_ret == "void") || (parms.Count == 0 && s_ret != "void")) || (parms == null && s_ret != "void")) && Name.Length > 3 && Name.Substring(0, 3) == "Get");
+			is_get = (((parms != null && ((parms.IsAccessor && s_ret == "void") || (parms.Count == 0 && s_ret != "void"))) || (parms == null && s_ret != "void")) && Name.Length > 3 && Name.Substring(0, 3) == "Get");
 			is_set = ((parms != null && (parms.IsAccessor || (parms.Count == 1 && s_ret == "void"))) && (Name.Length > 3 && Name.Substring(0, 3) == "Set"));
 			
 			if (parms != null) {
@@ -224,7 +224,7 @@ namespace GtkSharp.Generation {
 			else if (elem.HasAttribute("new_flag") || (container_type != null && (dup = container_type.GetMethodRecursively (Name)) != null) || (implementor != null && (dup = implementor.GetMethodRecursively (Name)) != null)) {
 				if (dup != null && dup.parms != null)
 					dup.parms.CreateSignature (false);
-				if (dup != null && ((dup.parms != null && dup.parms.Signature == parms.Signature) || (dup.parms == null && parms == null)))
+				if (elem.HasAttribute("new_flag") || (dup != null && ((dup.parms != null && dup.parms.Signature == parms.Signature) || (dup.parms == null && parms == null))))
 					sw.Write("new ");
 			}
 
@@ -297,7 +297,7 @@ namespace GtkSharp.Generation {
 			/* we are generated by the get Method, if there is one */
 			if (is_set || is_get)
 			{
-				if (container_type.GetPropertyRecursively (Name.Substring (3)) != null)
+				if (!elem.HasAttribute("new_flag") && container_type.GetPropertyRecursively (Name.Substring (3)) != null)
 					return;
 				comp = GetComplement ();
 				if (comp != null && comp.Validate () && is_set && parms.AccessorReturnType == comp.s_ret)
