@@ -1692,6 +1692,9 @@
   </data>
 </rule>
 <rule>
+  <class name="GtkBin">
+    <method>GetChild</method>
+  </class>
   <class name="GtkMenu">
     <method>SetScreen</method>
   </class>
