@@ -1,5 +1,11 @@
 2003-10-07  Mike Kestner  <mkestner@ximian.com>
 
+	* api/gtk-api.xml : regenerated
+	* generator/Method.cs : gen new_flag automatically if set
+	* sources/Gtk.metadata : mark new_flag on Gtk.Bin.GetChild
+
+2003-10-07  Mike Kestner  <mkestner@ximian.com>
+
 	* generator/ObjectGen.cs (Generate): check sigs.Count in addition
 	to the null check to determine if the signals hash should be
 	generated.
